update lib & add third_party & add some examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,19 +3,8 @@ project(MotorDriver)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_VERBOSE_MAKEFILE ON)
-find_package(Threads REQUIRED)
 
 # Include headers
-include_directories(.)
+add_subdirectory(lib)
+add_subdirectory(examples)
 
-add_executable(MotorDriver
-  main.cc
-  motor.cc
-)
-
-# Link against wiringPi
-find_library(WIRINGPI_LIBRARIES NAMES REQUIRED wiringPi)
-target_link_libraries(MotorDriver
-  ${WIRINGPI_LIBRARIES}
-  pthread
-)
